lab1/Test/L1-A-13-29.output
Error Type B at Line 2
Error Type A at Line 12
Error Type B at Line 17
Error Type B at Line 24
Error Type B at Line 31
Error Type A at Line 32
Error Type B at Line 35
Error Type B at Line 51
Error Type B at Line 57
Error Type B at Line 61
Error Type B at Line 76
Error Type B at Line 78
